# nptricubic

./: README.md  pyproject.toml
src/nptricubic/: __init__.py  matrix.py  tricubic.py
tests/: test_tricubic.py
